<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="6dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tentang"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10dp"
            android:textAlignment="center"
            />

        <ImageView
            android:contentDescription="@string/logo"
            android:paddingTop="15dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo"
            android:layout_gravity="center"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus2"
            android:textAlignment="center"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            android:id="@+id/textView" />

</LinearLayout>