<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="6dp">

            <ImageView
                android:src="@drawable/nav_background"
                android:id="@+id/restaurant_foto"
                android:contentDescription="@string/foto_tempatmakan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:scaleType="fitXY"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_marginBottom="6dp"
            >

            <TextView
                android:id="@+id/nama_tempat_makan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tempat_makan"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:textAlignment="center" />
            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bookmark" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bookmark"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:layout_marginBottom="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat_resaturant"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textStyle="bold"
                android:id="@+id/textView2" />

            <TextView
                android:id="@+id/restaurant_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textSize="14sp"
                android:hint="@string/contoh_alamat" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/abu2" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:textStyle="bold"/>

            <TextView
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deskripsi"
                android:id="@+id/deskripsi_restaurant"
                android:textSize="16sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal"
            android:background="@color/white">

                <ImageView
                    android:contentDescription="@string/icon_telp"
                    android:id="@+id/icon_telp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/icon_telp"
                    android:scaleType="fitXY"
                    android:layout_margin="5dp" />

                <TextView
                    android:id="@+id/restaurant_telp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="-"
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:layout_gravity="center_horizontal|center_vertical"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>