<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu2"
    android:paddingBottom="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp">

        <TextView
            android:id="@+id/nama_tempat_makan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tempat_makan"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="5dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginBottom="6dp">

        <RatingBar
            android:id="@+id/rating_restaurant"
            android:layout_margin="20dp"
            android:numStars="5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginBottom="6dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/isi_review_restaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tulis_pengalaman"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/count_char"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_margin="5dp"
            android:text="@string/limit"/>

        <Button
            android:id="@+id/kirim_review_restaurant_btn"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:text="@string/kirim"
            android:layout_gravity="end"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_marginBottom="6dp"
        android:padding="5dp">

        <ListView
            android:id="@+id/list_reviewer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"></ListView>
    </LinearLayout>

</LinearLayout>